assets/css/mgo.scss
:root {
  --INTERNAL-CODE-INLINE-color: #eeeeee;
  --mgo-gold: #d7b04b;
  --mgo-red: #ba2813;
  --mgo-blue: #2f81eb;
}

body {
  font-size: 1.2rem;
}

#R-logo.R-default {
  column-gap: 1em;
  .logo-title {
    font-size: 2em;
    flex-shrink: 1;
    min-width: 0;
    text-align: start;
    text-wrap: auto;
    word-break: break-word;
    .line1 {
      display: block;
    }
    .line2 {
      display: block;
      font-size: 0.8em;
    }
  }
}

.cover {
  background-image: url(/mgo-tutorial/images/ss-dragonsreach.jpg);
  background-size: cover;
  background-position: center;
  padding: 2rem 0;
  h1 {
    text-shadow: rgba(0,0,0,0.8) 1px 0 8px;
    line-height: 0.8em;
  }
}

.topbar-breadcrumbs {
  font-size: 1rem;
}

.flex {
  display: flex;
}

.file {
  display: inline-block;
  background-color: #d7b04b33;
  padding: 0 6px;
  border-radius: 10px;
  font-family: var(--INTERNAL-CODE-font);
}

.next {
  margin-top: 2rem;
  text-align: center;
  container-type: inline-size;
  a {
    display: inline-block;
    font-weight: bold;
    max-width: 600px;
    font-size: 4cqw;
    text-decoration: none;
    position: relative;
    color: #eee;
    line-height: 1;
    border-radius: 4rem;
    padding: 1.5rem;
    transition: all .2s;
    --bs1: -2px -2px 0 2px var(--mgo-gold);
    --bs2: 0 0 0 4px var(--mgo-red);
    --bs3: 0 0 2px 7px rgba(0, 0, 0, .05);
    box-shadow: var(--bs1), var(--bs2), var(--bs3);
  }
}

.btn-inline {
  display: inline-block;
  background-color: #0076ff33;
  padding: 0 6px;
  border-radius: 10px;
  font-family: var(--INTERNAL-CODE-font);
}

video {
  width: 100%;
}

div.img {
  margin: 0 auto 2rem;
  max-width: 650px;

  &>img {
    width: 95%;
    max-width: 600px;
  }
  .caption {
    align-items: center;
    justify-content: center;
    background: #d7b04b;
    color: black;
    padding: 1rem;
    box-shadow: 0px 5px 20px #000;
    font-size: 80%;
    text-align: center;
    width: 100%;
    .grow {
      flex: 1;
    }
    a {
      color: #005fcc;
      font-weight: bold;
    }
  }
}

.aside {
  clear: both;
  margin: 2rem auto;
  max-width: 50em;
  position: relative;
  padding-bottom: 1rem;
  text-shadow: rgba(0,0,0,0.8) 1px 0 1px;
  color: #fff;
  font-size: 1rem;
}
.aside h4 {
  font-size: 1rem;
  font-weight: 700;
  padding: 0.5rem;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 1px;
  margin-bottom: 0;
  color: #fff;
}
.aside .emoji {
  float: left;
  font-size: 400%;
  margin: 0 1rem;
}
.aside .body {
  padding: 0 1rem;
}
.aside a {
  color: #ffce00;
}
#body .aside a.highlight:after {
  background-color: #ffce00;
}
.aside code {
  background: rgba(64,64,64,0.2);
  color: #fff;
  font-size: 100%;
  padding: 2px;
}
.aside.aside-alert {
  background: linear-gradient(24deg,rgba(194, 42, 21, 0.3) 0%, rgba(185, 137, 41, 0.3) 100%, rgba(185, 137, 41, 0.3) 38%);
  h4 {
    background: rgba(54, 23, 14, 0.5);
  }
  .body {
    background-image: url("/mgo-tutorial/images/helmet-bg.png");
    background-size: contain;
    background-position: center center;
    background-repeat: no-repeat;
  }
}
.aside.aside-btw {
  background-image: linear-gradient(24deg, rgba(43, 89, 195, 0.4) 0%, #77c8be66 100%);
  h4 {
    background: rgba(50, 50, 50, 0.3);
  }
  .body {
    background-image: url("/mgo-tutorial/images/akatosh-alpha.png");
    background-size: contain;
    background-position: center center;
    background-repeat: no-repeat;
  }
}
.aside.aside-info {
  background: #2A2A2A;
  background-image: linear-gradient(24deg,rgba(42, 42, 42, 1) 0%, rgba(79, 39, 28, 1) 48%, rgba(79, 62, 29, 1) 100%);
  h4 {
    background: rgba(54, 23, 14, 0.5);
  }
  .body {
    background-image: url("/mgo-tutorial/images/helmet-bg.png");
    background-size: contain;
    background-position: center center;
    background-repeat: no-repeat;
  }
}
.aside.aside-danger {
  background-color: #cc2936;
  background-image: url("/mgo-tutorial/images/sayagata.png"), linear-gradient(24deg, #c92936 0%, #ebbab9 100%);
}
.aside.aside-danger h4 {
  background: rgba(201,41,54,0.4);
}

